# af2_analysis

./: .bumpversion.toml  .readthedocs.yaml  Makefile  README.md  azure-pipelines.yml  example.ipynb  old_clustering.py  old_setup.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: requirements.txt
docs/paper/: Notes.md  paper.bib  paper.md
docs/paper/jats/: paper.jats
docs/source/: af2_analysis.format.rst  af2_analysis.rst  af2_analysis.test.rst  analysis.rst  basic_example.md  conf.py  contributing.md  index.rst  installation.md  logo_prompt.txt  modules.rst  readme.rst
docs/source/_static/: dimer.html
docs/source/notebooks/: basic_example.ipynb  basic_example_2.ipynb
src/af2_analysis/: __init__.py  analysis.py  clustering.py  data.py  docking.py  new_clust.py  peptide.py  plot.py  sequence.py
src/af2_analysis/format/: __init__.py  af3_webserver.py  afpulldown.py  colabfold_1_5.py  default.py
src/af2_analysis/test/: __init__.py  data_files.py  test_analysis.py  test_clustering.py  test_data.py  test_docking.py  test_format.py  test_sequence.py
src/af2_analysis/test/inputs/beta_amyloid_dimer_cf_1.5.5/: beta_amyloid_dimer_d2fa3_0.a3m  beta_amyloid_dimer_d2fa3_0.csv  beta_amyloid_dimer_d2fa3_0_predicted_aligned_error_v1.json  beta_amyloid_dimer_d2fa3_0_scores_rank_001_alphafold2_multimer_v3_model_5_seed_002.json  beta_amyloid_dimer_d2fa3_0_scores_rank_002_alphafold2_multimer_v3_model_5_seed_007.json  beta_amyloid_dimer_d2fa3_0_scores_rank_003_alphafold2_multimer_v3_model_5_seed_003.json  beta_amyloid_dimer_d2fa3_0_scores_rank_004_alphafold2_multimer_v3_model_5_seed_006.json  beta_amyloid_dimer_d2fa3_0_scores_rank_005_alphafold2_multimer_v3_model_5_seed_004.json  beta_amyloid_dimer_d2fa3_0_scores_rank_006_alphafold2_multimer_v3_model_5_seed_000.json  beta_amyloid_dimer_d2fa3_0_scores_rank_007_alphafold2_multimer_v3_model_5_seed_001.json  beta_amyloid_dimer_d2fa3_0_scores_rank_008_alphafold2_multimer_v3_model_5_seed_005.json  beta_amyloid_dimer_d2fa3_0_scores_rank_009_alphafold2_multimer_v3_model_4_seed_002.json  beta_amyloid_dimer_d2fa3_0_scores_rank_010_alphafold2_multimer_v3_model_4_seed_004.json  beta_amyloid_dimer_d2fa3_0_scores_rank_011_alphafold2_multimer_v3_model_4_seed_006.json  beta_amyloid_dimer_d2fa3_0_scores_rank_012_alphafold2_multimer_v3_model_3_seed_001.json  beta_amyloid_dimer_d2fa3_0_scores_rank_013_alphafold2_multimer_v3_model_4_seed_003.json  beta_amyloid_dimer_d2fa3_0_scores_rank_014_alphafold2_multimer_v3_model_4_seed_007.json  beta_amyloid_dimer_d2fa3_0_scores_rank_015_alphafold2_multimer_v3_model_3_seed_000.json  beta_amyloid_dimer_d2fa3_0_scores_rank_016_alphafold2_multimer_v3_model_4_seed_000.json  beta_amyloid_dimer_d2fa3_0_scores_rank_017_alphafold2_multimer_v3_model_3_seed_006.json  beta_amyloid_dimer_d2fa3_0_scores_rank_018_alphafold2_multimer_v3_model_3_seed_004.json  beta_amyloid_dimer_d2fa3_0_scores_rank_019_alphafold2_multimer_v3_model_3_seed_005.json  beta_amyloid_dimer_d2fa3_0_scores_rank_020_alphafold2_multimer_v3_model_3_seed_002.json  beta_amyloid_dimer_d2fa3_0_scores_rank_021_alphafold2_multimer_v3_model_3_seed_003.json  beta_amyloid_dimer_d2fa3_0_scores_rank_022_alphafold2_multimer_v3_model_3_seed_007.json  beta_amyloid_dimer_d2fa3_0_scores_rank_023_alphafold2_multimer_v3_model_1_seed_001.json  beta_amyloid_dimer_d2fa3_0_scores_rank_024_alphafold2_multimer_v3_model_1_seed_003.json  beta_amyloid_dimer_d2fa3_0_scores_rank_025_alphafold2_multimer_v3_model_1_seed_006.json  (+18 more)
(+20 files in other folders)
