[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "af2-analysis"
version = "0.0.2"
dynamic = ["readme"]
description = "`AF2 analysis` is a python library allowing analysis of Alphafold results."
license = {text = "GNUv2.0"}
requires-python = ">=3.7"
authors = [
    { name = "Samuel Murail", email = "samuel.murail@u-paris.fr" },
]
keywords = [
    "AlphaFold2",
    "ColabFold",
    "Python",
    "af2_analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development",
]
dependencies = [
    "cmcrameri>=1.7",
    "ipywidgets>=7.6",
    "nglview>=3.0",
    "numpy>=1.21",
    "pandas>=1.3.4",
    "pdb_numpy>=0.0.6",
    "seaborn>=0.11",
    "tqdm>=4.0",
]

[project.scripts]
af2_analysis = "af2_analysis.__main__:main"

[project.urls]
Homepage = "https://github.com/samuelmurail/af2_analysis"


[tool.setuptools.dynamic]
# version = {attr = "af2_analysis.VERSION"}
readme = {file = ["README.md"]}
