[bumpversion]
current_version = 0.0.2
commit = False
tag = False
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
serialize = {major}.{minor}.{patch}

[metadata]
description-file = README.md
license_files = LICENSE

[bumpversion:file:setup.py]

[bumpversion:file:src/af2_analysis/__init__.py]

[bumpversion:file:docs/source/conf.py]


[bdist_wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
